Mise en forme de about et contact

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         <div class="container">
             <!-- Logo -->
             <div class="logo-wrapper">
-                <a class="logo" href="index.html"> <img src="img/logo-anelca.png" class="logo-img" alt=""> </a>
+                <a class="logo" href="index.html"> <img src="img/logo-anelca.png" class="logo-img" alt="" id="img"> </a>
             </div>
             <!-- Button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"><i class="ti-menu"></i></span> </button>
             <!-- Menu -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item "> <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Accueil</a>
+                    <li class="nav-item "> <a class="nav-link" href="index.html" role="button">Accueil</a>
                         
                     </li>
                     <li class="nav-item"><a class="nav-link" href="about.html">A propos</a></li>
@@ -136,7 +136,7 @@
                                 <g>
                                     <use xlink:href="#circlePath" fill="none" />
                                     <text fill="#0f2454">
-                                        <textPath xlink:href="#circlePath"> . Anelca travel . agence de voyage </textPath>
+                                        <textPath xlink:href="#circlePath"> . Anelca travel . Anelca travel </textPath>
                                     </text>
                                 </g>
                             </svg>
@@ -593,63 +593,63 @@
                     </div>
                     <!-- Testimonials -->
                     <div class="col-md-5 offset-md-2">
-    <div class="testimonials-box">
-        <div class="head-box">
-            <h6>Témoignages</h6>
-            <h4>Avis des voyageurs</h4>
-        </div>
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <p>Grâce à cette agence, mon voyage au cœur du Congo a été une expérience inoubliable. L’organisation était impeccable, et j’ai pu découvrir des endroits magnifiques que je n’aurais jamais imaginé visiter. Je recommande vivement leurs services.</p>
-                <div class="info">
-                    <div class="author-img"> <img src="img/team/04.png" alt="Photo de M'Bemba"> </div>
-                    <div class="cont">
-                        <div class="rating"> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
+                        <div class="testimonials-box">
+                            <div class="head-box">
+                                <h6>Témoignages</h6>
+                                <h4>Avis des voyageurs</h4>
+                            </div>
+                            <div class="owl-carousel owl-theme">
+                                <div class="item">
+                                    <p>Grâce à cette agence, mon voyage au cœur du Congo a été une expérience inoubliable. L’organisation était impeccable, et j’ai pu découvrir des endroits magnifiques que je n’aurais jamais imaginé visiter. Je recommande vivement leurs services.</p>
+                                    <div class="info">
+                                        <div class="author-img"> <img src="img/team/04.png" alt="Photo de M'Bemba"> </div>
+                                        <div class="cont">
+                                            <div class="rating"> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                            </div>
+                                            <h6>M'Bemba Kabila</h6> <span>Avis client</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <p>Le voyage organisé par cette agence a dépassé toutes mes attentes. La prise en charge était parfaite, les guides étaient très compétents, et j’ai pu vivre des moments authentiques au contact des communautés locales.</p>
+                                    <div class="info">
+                                        <div class="author-img"> <img src="img/team/05.png" alt="Photo de Amina"> </div>
+                                        <div class="cont">
+                                            <div class="rating"> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                            </div>
+                                            <h6>Amina Nzala</h6> <span>Avis client</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <p>En tant qu'européenne, j’ai été agréablement surprise par la qualité des prestations et la chaleur humaine rencontrée. Cette agence a su allier professionnalisme et convivialité pour un séjour réussi.</p>
+                                    <div class="info">
+                                        <div class="author-img"> <img src="img/team/06.png" alt="Photo de Claire"> </div>
+                                        <div class="cont">
+                                            <div class="rating"> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                                <i class="star active"></i> 
+                                            </div>
+                                            <h6>Claire Dubois</h6> <span>Avis client</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <h6>M'Bemba Kabila</h6> <span>Avis client</span>
                     </div>
-                </div>
-            </div>
-            <div class="item">
-                <p>Le voyage organisé par cette agence a dépassé toutes mes attentes. La prise en charge était parfaite, les guides étaient très compétents, et j’ai pu vivre des moments authentiques au contact des communautés locales.</p>
-                <div class="info">
-                    <div class="author-img"> <img src="img/team/05.png" alt="Photo de Amina"> </div>
-                    <div class="cont">
-                        <div class="rating"> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                        </div>
-                        <h6>Amina Nzala</h6> <span>Avis client</span>
-                    </div>
-                </div>
-            </div>
-            <div class="item">
-                <p>En tant qu'européenne, j’ai été agréablement surprise par la qualité des prestations et la chaleur humaine rencontrée. Cette agence a su allier professionnalisme et convivialité pour un séjour réussi.</p>
-                <div class="info">
-                    <div class="author-img"> <img src="img/team/06.png" alt="Photo de Claire"> </div>
-                    <div class="cont">
-                        <div class="rating"> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                            <i class="star active"></i> 
-                        </div>
-                        <h6>Claire Dubois</h6> <span>Avis client</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
                 </div>
             </div>
