--- a/contact.html
+++ b/contact.html
@@ -91,35 +91,39 @@
                         <div class="right-sidebar">
                             <div class="right-sidebar item">
                                 <h2>Contactez-nous</h2>
-                                <form method="post" class="right-sidebar item-form contact__form" action="https://duruthemes.com/demo/html/travol/multipage-slider/mail.php">
-                                    <!-- form message -->
+                                <form method="post" class="right-sidebar item-form contact__form" id="contactForm">
+                                    <!-- Message de confirmation -->
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="alert alert-success contact__msg" style="display: none" role="alert"> Your message was sent successfully. </div>
+                                            <div class="alert alert-success" id="formMessage" style="display: none;" role="alert">
+                                                Votre message a été envoyé avec succès.
+                                            </div>
                                         </div>
                                     </div>
-                                    <!-- form elements -->
+                                
+                                    <!-- Champs du formulaire -->
                                     <div class="row">
                                         <div class="col-md-6 form-group">
-                                            <input name="name" type="text" placeholder="Your Name *" required>
+                                            <input name="name" type="text" placeholder="Votre nom *" required>
                                         </div>
                                         <div class="col-md-6 form-group">
-                                            <input name="email" type="email" placeholder="Your Email *" required>
+                                            <input name="email" type="email" placeholder="Votre email *" required>
                                         </div>
                                         <div class="col-md-6 form-group">
-                                            <input name="phone" type="text" placeholder="Your Number *" required>
+                                            <input name="phone" type="text" placeholder="Votre numéro *" required>
                                         </div>
                                         <div class="col-md-6 form-group">
-                                            <input name="subject" type="text" placeholder="Subject *" required>
+                                            <input name="subject" type="text" placeholder="Sujet *" required>
                                         </div>
                                         <div class="col-md-12 form-group">
                                             <textarea name="message" id="message" cols="30" rows="4" placeholder="Message *" required></textarea>
                                         </div>
                                         <div class="col-md-12">
-                                            <button class="butn-dark"><a href="#0"><span>Send Message</span></a></button>
+                                            <button type="submit" class="butn-dark"><a><span>Send Message</span></a></button>
                                         </div>
                                     </div>
                                 </form>
+
                             </div>
                         </div>
                     </div>
@@ -310,6 +314,7 @@
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/smooth-scroll.min.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 <!-- Mirrored from duruthemes.com/demo/html/travol/multipage-slider/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 03 Jun 2025 10:29:44 GMT -->
