Correction de la langue dans contact.html et ajustement des descriptions de services dans about.html. Suppression de la marge pour l'image du logo dans custom.css. Correction d'une balise de paragraphe dans index.html.

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                 <div class="col-md-6 mb-30 animate-box" data-animate-effect="fadeInUp">
                     <p>Notre agence de voyages met à votre disposition une expertise reconnue pour vous accompagner dans toutes les étapes de votre projet. </p>
                                 
-                    <p>Nous vous proposons une gamme complète de services : réservation de billets nationaux et internationaux (CAA), assistance pour l’obtention du passeport et du visa, réservation d’hôtels, ainsi que la souscription à une assurance voyage. Notre objectif est de vous offrir un accompagnement personnalisé, fiable et efficace.</p>
+                    <p>Nous vous proposons une gamme complète de services : réservation de billets nationaux (CAA) et internationaux, assistance pour l’obtention du passeport et du visa, réservation d’hôtels, ainsi que la souscription à une assurance voyage. Notre objectif est de vous offrir un accompagnement personnalisé, fiable et efficace.</p>
                                 
                     <p>Notre équipe de professionnels vous aide à choisir la destination qui correspond le mieux à vos envies, votre budget et vos attentes. Grâce à notre savoir-faire, vous pouvez explorer le monde en toute sérénité, avec des prestations de qualité et un service client à l’écoute.</p>
                     <ul class="list-unstyled about-list mb-30">
@@ -122,11 +122,11 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-subtitle">Nos experts</div>
-                    <div class="section-title">Rencontrez nos <span>guides</span></div>
+                    <div class="section-title">Rencontrez notre <span>guide</span></div>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-4">
+            <div class="row d-flex justify-content-center flex-1">
+                <div class="col-12 col-lg-6">
                     <div class="team-card mb-30">
                         <div class="team-img"><img src="img/anael.png" alt="" class="w-100"></div>
                         <div class="team-content">
@@ -266,7 +266,7 @@
                                     </div>
                                     <div class="footer-contact-link-content">
                                         <h6>Contactez-nous</h6>
-                                        <p>+243 983 664 675/p>
+                                        <p>+243 983 664 675</p>
                                     </div>
                                 </div>
                                 <div class="footer-contact-links-divider"></div>
