--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="fr">
 
 <!-- Mirrored from duruthemes.com/demo/html/travol/multipage-slider/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 03 Jun 2025 10:29:44 GMT -->
 <head>
@@ -65,7 +65,7 @@
             <div class="row mb-90">
                 <div class="col-md-6 mb-60">
                     <h3>Anelca travel</h3>
-                    <p>Nous proposons des services complets pour la réservation de billets, qu’ils soient nationaux ou internationaux (CAA), l’assistance dans les démarches d’obtention de passeport et de visa, la réservation d’hôtels, ainsi que la souscription à une assurance voyage.</p>
+                    <p>Nous proposons des services complets pour la réservation de billets, qu’ils soient nationaux (CAA) ou internationaux, l’assistance dans les démarches d’obtention de passeport et de visa, la réservation d’hôtels, ainsi que la souscription à une assurance voyage.</p>
                     <div class="phone-call mb-30">
                         <div class="icon"><span class="flaticon-phone-call"></span></div>
                         <div class="text">
