--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
                     <div class="phone-call mb-30">
                         <div class="icon"><span class="flaticon-phone-call"></span></div>
                         <div class="text">
-                            <p>Pour plus d'informations</p> <a href="tel:243 983 664 675">243 983 664 675</a>
+                            <p>Pour plus d'informations</p> <a href="tel:243 991 414 743">+243 991 414 743</a>
+                            <br><a href="tel:243 983 664 675">+243 983 664 675</a>
                         </div>
                     </div>
                 </div>
@@ -587,7 +588,7 @@
                         <div class="phone-call mb-10">
                             <div class="icon color-1"><span class="flaticon-phone-call"></span></div>
                             <div class="text">
-                                <p class="color-1">Contactez-nous</p> <a class="color-1" href="tel:243 983 664 675">243 983 664 675</a>
+                                <p class="color-1">Contactez-nous</p> <a class="color-1" href="tel:243 991 414 743">+243 991 414 743</a><br><a class="color-1" href="tel:243 983 664 675">+243 983 664 675</a>
                             </div>
                         </div>
                     </div>
@@ -602,7 +603,7 @@
                                 <div class="item">
                                     <p>Grâce à cette agence, mon voyage au cœur du Congo a été une expérience inoubliable. L’organisation était impeccable, et j’ai pu découvrir des endroits magnifiques que je n’aurais jamais imaginé visiter. Je recommande vivement leurs services.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="img/team/04.png" alt="Photo de M'Bemba"> </div>
+                                        <div class="author-img"> <img src="img/pitchou.jpeg" alt="Photo de M'Bemba"> </div>
                                         <div class="cont">
                                             <div class="rating"> 
                                                 <i class="star active"></i> 
@@ -611,14 +612,14 @@
                                                 <i class="star active"></i> 
                                                 <i class="star active"></i> 
                                             </div>
-                                            <h6>M'Bemba Kabila</h6> <span>Avis client</span>
+                                            <h6>Jean Kasongo</h6> <span>Avis client</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="item">
                                     <p>Le voyage organisé par cette agence a dépassé toutes mes attentes. La prise en charge était parfaite, les guides étaient très compétents, et j’ai pu vivre des moments authentiques au contact des communautés locales.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="img/team/05.png" alt="Photo de Amina"> </div>
+                                        <div class="author-img"> <img src="img/sephora.jpeg" alt="Photo de Amina"> </div>
                                         <div class="cont">
                                             <div class="rating"> 
                                                 <i class="star active"></i> 
@@ -634,7 +635,7 @@
                                 <div class="item">
                                     <p>En tant qu'européenne, j’ai été agréablement surprise par la qualité des prestations et la chaleur humaine rencontrée. Cette agence a su allier professionnalisme et convivialité pour un séjour réussi.</p>
                                     <div class="info">
-                                        <div class="author-img"> <img src="img/team/06.png" alt="Photo de Claire"> </div>
+                                        <div class="author-img"> <img src="img/kesy.jpeg" alt="Photo de Claire"> </div>
                                         <div class="cont">
                                             <div class="rating"> 
                                                 <i class="star active"></i> 
@@ -643,7 +644,7 @@
                                                 <i class="star active"></i> 
                                                 <i class="star active"></i> 
                                             </div>
-                                            <h6>Claire Dubois</h6> <span>Avis client</span>
+                                            <h6>Kesy lingomba</h6> <span>Avis client</span>
                                         </div>
                                     </div>
                                 </div>
@@ -693,6 +694,7 @@
                                     </div>
                                     <div class="footer-contact-link-content">
                                         <h6>Contactez-nous</h6>
+                                        <p>+243 991 414 743</p>
                                         <p>+243 983 664 675</p>
                                     </div>
                                 </div>
